--- a/src/Makefile
+++ b/src/Makefile
@@ -10,10 +10,12 @@ DEVICE = NRF51
 BOARD = BOARD_PCA10000
 #SEGGER_SERIAL = 
 
-USE_SOFTDEVICE = S110
-
-SDK_PATH = ../nrf51_sdk_v5_1_0_36092/nrf51822/
+SDK_PATH = $(HOME)/Workspace/SDK/nrf51_sdk_v5_1_0_36092/nrf51822/
+SOFTDEVICE_PATH = $(HOME)/Workspace/SDK/s110_nrf51822_6.0.0/
 TEMPLATE_PATH = ../nrf51-pure-gcc-setup/template/
+
+USE_SOFTDEVICE = S110
+SOFTDEVICE = $(SOFTDEVICE_PATH)s110_nrf51822_6.0.0_softdevice.hex
 
 CFLAGS = -Os
 
