--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,14 @@
 TOOLCHAIN_PATH = /opt/arm/gcc-arm-none-eabi-4_7-2013q3/bin/
 
 # List all source files the application uses.
-APPLICATION_SRCS = $(notdir $(wildcard ./*.c))  nrf_delay.c
+APPLICATION_SRCS = $(notdir $(wildcard ./*.c))  nrf_delay.c softdevice_handler.c ble_advdata.c
 
 # Use shell to find name of root folder. Possible but horrible to do in make.
 PROJECT_NAME = $(shell basename "$(realpath ../)")
 
 DEVICE = NRF51
-BOARD = BOARD_PCA10000
+BOARD = SELF_BOARD
+# BOARD = BOARD_PCA10000
 #SEGGER_SERIAL = 
 
 SDK_PATH = $(HOME)/Workspace/SDK/nrf51_sdk_v5_1_0_36092/nrf51822/
